--- a/templates/cadastroProduto.html
+++ b/templates/cadastroProduto.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h2 style="text-align:center;">Cadastro de Cliente</h2>
+    <h2 style="text-align:center;">Cadastro de Produto</h2>
 
     <form action="/produtos/salvar" method="post">
         <label for="nome">Nome:</label>
