--- a/templates/cadastroCliente.html
+++ b/templates/cadastroCliente.html
@@ -6,18 +6,36 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+
+    <nav class="navbar">
+        <a href="/">Home</a>
+        <a href="/clientes">Clientes</a>
+        <a href="/produtos">Produtos</a>
+        <a href="/vendas">Vendas</a>
+    </nav>
+
+
     <h2 style="text-align:center;">Cadastro de Cliente</h2>
 
-    <form action="/clientes/salvar" method="post">
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome" id="nome" required>
-
-        <label for="endereco">Endereço:</label>
-        <input type="text" name="endereco" id="endereco" required>
-
-        <input type="submit" value="Cadastrar">
+    <form action="{{ '/clientes/atualizar' if cliente else '/clientes/salvar' }}" method="post">
+        <div class="form-row">
+            {% if cliente %}
+                <input type="hidden" name="idcliente" value="{{ cliente.idcliente }}">
+            {% endif %}
+        </div>
+        <div class="form-row">
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" id="nome" value="{{ cliente.nome if cliente else '' }}" required>
+        </div>
+        <div class="form-row">
+            <label for="endereco">Endereço:</label>
+            <input type="text" name="endereco" id="endereco" value="{{ cliente.endereco if cliente else '' }}" required>
+        </div>
+        <div style="text-align:center;">
+            <input type="submit" value="{{ 'Atualizar' if produto else 'Cadastrar' }}">
+        </div>
     </form>
-
+    </br>
     <div style="text-align:center;">
         <a href="/clientes"><button>Voltar</button></a>
     </div>
