--- a/templates/efetuarVenda.html
+++ b/templates/efetuarVenda.html
@@ -6,15 +6,27 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+
+    <nav class="navbar">
+        <a href="/">Home</a>
+        <a href="/clientes">Clientes</a>
+        <a href="/produtos">Produtos</a>
+        <a href="/vendas">Vendas</a>
+    </nav>
+
+
     <h2 style="text-align:center;">Cadastro de Venda</h2>
     <form action="/vendas/salvar" method="post">
-        <div>
+        <div class="form-row">
             <label for="cliente">Cliente:</label>
             <select name="idcliente" id="cliente" required>
                 {% for cliente in clientes %}
                     <option value="{{ cliente.idcliente }}">{{ cliente.nome }}</option>
                 {% endfor %}
             </select>
+        </div>
+
+        <div class="form-row">
             <label for="produto">Produto:</label>
             <select name="idproduto" id="produto" required>
                 {% for produto in produtos %}
@@ -25,6 +37,9 @@
                     {{ produto.nome }}</option>
                 {% endfor %}
             </select>
+        </div>
+
+        <div class="form-row">
             <label for="qtde">Quantidade:</label>
             <input type="number" name="qtde" id="qtde" min="1" required>
             <button type="button" onclick="inserir_itemvenda()">Adicionar Item</button>
@@ -37,6 +52,7 @@
                     <th>Quantidade</th>
                     <th>Valor</th>
                     <th>Subtotal</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
         </table>
@@ -45,6 +61,7 @@
         </div>
         <input type="hidden" name="itens_json" id="itens_json">
     </form>
+    </br>
     <div style="text-align:center;">
         <a href="/vendas"><button>Voltar</button></a>
     </div>
