--- a/templates/listaCliente.html
+++ b/templates/listaCliente.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="/">Home</a>
+        <a href="/clientes">Clientes</a>
+        <a href="/produtos">Produtos</a>
+        <a href="/vendas">Vendas</a>
+    </nav>
     <h2 class="center">{{ titulo }}</h2>
 
     <table>
@@ -13,6 +19,7 @@
             <tr>
                 <th>Nome</th>
                 <th>Endereco</th>
+                <th>Ação</th>
             </tr>
         </thead>
         <tbody>
@@ -20,6 +27,7 @@
             <tr>
                 <td>{{ cliente.nome }}</td>
                 <td>{{ cliente.endereco }}</td>
+                <td><a href="/clientes/editar/{{ cliente.idcliente }}"><button>Editar</button></a></td>
             </tr>
             {% endfor %}
         </tbody>
