--- a/templates/listaProdutos.html
+++ b/templates/listaProdutos.html
@@ -6,14 +6,22 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="/">Home</a>
+        <a href="/clientes">Clientes</a>
+        <a href="/produtos">Produtos</a>
+        <a href="/vendas">Vendas</a>
+    </nav>
+
     <h2 class="center">{{ titulo }}</h2>
 
     <table>
         <thead>
             <tr>
-                <th style="width: 70%">Nome</th>
+                <th style="width: 60%">Nome</th>
                 <th style="width: 15%">Quantidade</th>
                 <th style="width: 15%">Preço</th>
+                <th style="width: 10%">Ações</th>
             </tr>
         </thead>
         <tbody>
@@ -21,7 +29,8 @@
             <tr>
                 <td>{{ produto.nome }}</td>
                 <td>{{ produto.qtde }}</td>
-                <td>{{ produto.preco }}</td>
+                <td>R$ {{ produto.preco }}</td>
+                <td><a href="/produtos/editar/{{ produto.idproduto }}"><button>Editar</button></a></td>
             </tr>
             {% endfor %}
         </tbody>
